--- a/index.html
+++ b/index.html
@@ -60,31 +60,7 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
     
-<script>
-
-
-  function playSound(e) {
-    const audio = document.querySelector(`audio[data-key="${e.keyCode || e.target.attributes['data-key'].value}"]`);
-    const key = document.querySelector(`.key[data-key="${e.keyCode || e.target.attributes['data-key'].value}"]`);
-     if (!audio) return; // stops the function to avoid hitting invalid keys. 
-    audio.currentTime = 0; //rewind. 
-    audio.play();
-    key.classList.add('playing');
-  };
-
-  function removeTransition(e) {
-    if(e.propertyName !== 'transform') return; // skips property if it's not equal to transform.
-    this.classList.remove('playing');
-  }
-
-  const keys = document.querySelectorAll('.key');
-  keys.forEach(key => {
-    key.addEventListener('transitionend', removeTransition)
-    key.addEventListener('click', playSound)
-  });
-  window.addEventListener('keydown', playSound);
-
-</script>
+  <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
